# rust_bbc_microbit

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
